--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -1,5 +1,5 @@
 
-{% macro render_inputt(name,placeholder,type="text") %}
+{% macro render_input(name,placeholder,type="text") %}
 
 <div class="control-group">
     <label for="{{name}}" class="control-label">{{placeholder}}</label> 
@@ -18,14 +18,14 @@
             {{field(**kwargs)|safe}} 
         </div>
     </div>
+    {%if field.errors%}
+    <ul>
+        {%for error in field.errors%}
+        <li style="color:red;">
+            {{error}}
+        </li>
+        {%endfor%}
+    </ul>
+    {%endif%}
 {%endmacro%}
 
-{% macro render_input(name, placeholder, type = "text") %}
-
-<div class="control-group">
-    <label for="{{ name }}" class="control-label">{{ placeholder }}</label>
-    <div class="controls">
-        <input type="{{ type }}" name="{{ name }}" placeholder="{{ placeholder }}" value="">
-    </div>
-</div>
-{%endmacro%}
